--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.8.0",
     "react-material-ui-carousel": "^3.4.2",
-    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
