--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react-app": "^3.1.2",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.7.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
